/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Marc Palacio
 */

package baseline;

public class Item {
    private String event;
    private String description;
    private String dueDate;
    private boolean isComplete;

    public Item(String event, String description, String dueDate, boolean isComplete){
        // Sets parameters of Item
    }

    // Setters and getters are used in case the user decides to edit an item of the list
    public void setEvent(String event){
        // sets event
    }

    public void setDescription(String description){
        // sets description
    }

    public void setDueDate(String dueDate){
        // sets due date
    }

    public void setIsComplete(boolean isComplete){
        // sets if the item is complete or not
    }

    public String getEvent(){
        // returns event
        return "";
    }

    public String getDescription(){
        // returns description
        return "";
    }

    public String getDueDate(){
        // returns due date
        return "";
    }

    public Boolean getComplete(){
        // returns if an item is complete or not
        return true;
    }
}
