/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Marc Palacio
 */

package baseline;

import java.util.ArrayList;

public class List {
    private ArrayList<Item> listItems = new ArrayList<>();

    public void createListItems(String inputFileName){
        // Adds the items from the input to item list
        // Sets that list equal to the list in this class
    }

    public void addItems(Item add){
        // Adds item from user input to the ArrayList
    }

    public String createOutput(){
        // Creates a StringBuilder
        // Adds the elements to a string in format
        //      Possibly using a different character than "," to separate the values
        // returns the StringBuilder
        return "";
    }
}
