/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Marc Palacio
 */

package baseline;

import java.util.ArrayList;

public class MyFileReader {
    private ArrayList<Item> inputList = new ArrayList<>();

    public ArrayList<Item> scanInputFile(String fileInputName){
        // Creates a file reader
        // Adds elements from each line to inputList
        // Returns inputList
        return inputList;
    }
}
