/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Marc Palacio
 */

package baseline;

public class MyFileWriter {
    public void writeToFile(String write, String fileOutputName){
        // Creates a file writer
        // Writes to file using fileOutputName
    }
}
